feat(angular): create user registration
* create registration page
* add activation dialog

--- a/src/shared/ui/components/sidebar/sidebar-container/sidebar-container.component.html
+++ b/src/shared/ui/components/sidebar/sidebar-container/sidebar-container.component.html
@@ -1,4 +1,4 @@
 <div class="sidebar flex h-full bg-white absolute overflow-y-auto overflow-x-hidden">
 	<ng-container *ngTemplateOutlet="template"></ng-container>
 </div>
-<div class="back-drop" (click)="close()" (tap)="close()"></div>
+<div class="back-drop outline-none border-none" (click)="close()" (tap)="close()"></div>
