feat(ci): gitlab ci set up

--- a/src/showcase/components/auth/register/register.component.html
+++ b/src/showcase/components/auth/register/register.component.html
@@ -24,7 +24,7 @@
 			></sb-form-error>
 			<sb-form-error
 				*ngIf="emailField!.touched && form!.errors?.['inCorrect']"
-				error="Username must be answered to pattern"
+				error="email must be answered to pattern"
 			></sb-form-error>
 		</div>
 	</fieldset>
