--- a/src/showcase/components/ui/user-page-switche/user-page-switche.component.html
+++ b/src/showcase/components/ui/user-page-switche/user-page-switche.component.html
@@ -14,7 +14,7 @@
 					routerLink="/user/library"
 					routerLinkActive="active"
 				>
-					<span class="text-center">Library</span>
+					<a class="py-[10px] px-[15px] flex items-center text-center"><span>Library</span></a>
 				</li>
 			</ul>
 		</div>
