--- a/src/shared/ui/components/control/control.component.scss
+++ b/src/shared/ui/components/control/control.component.scss
@@ -1,3 +1,6 @@
+:host {
+}
+
 div {
 	border: none;
 	position: relative;
@@ -9,20 +12,67 @@ div {
 	}
 }
 
-input {
-	background: transparent;
-	width: 100%;
+.sb-floated {
+	border: 1px solid gray;
+	padding: 11px;
+	border-radius: 15px;
 	position: relative;
-	border: none;
-	border-bottom: solid #c4c4c4;
-	display: flex;
-	outline: none;
-	transition: 0.3s all ease-in-out;
-	transform-origin: center;
+	&:after {
+		content: '';
+		display: block;
+		position: absolute;
 
-	&:focus {
-		border-bottom-width: 3px;
-		border-bottom-color: #2e84f4;
+		background: white;
+		width: 55px;
+		height: 13px;
+		top: -5px;
+		left: 10px;
+	}
+	input {
+		width: 100%;
+		height: 100%;
+		border: none;
+		outline: none;
+		padding: 5px;
+		border-radius: 15px;
+	}
+}
+
+.sb-primitive {
+	input {
+		background: transparent;
+		width: 100%;
+		position: relative;
+		border: none;
+		border-bottom: solid #c4c4c4;
+		display: flex;
+		outline: none;
+		transition: 0.3s all ease-in-out;
+		transform-origin: center;
+
+		&:focus {
+			border-bottom-width: 3px;
+			border-bottom-color: #2e84f4;
+		}
+	}
+}
+
+.sb-primitive {
+	input {
+		background: transparent;
+		width: 100%;
+		position: relative;
+		border: none;
+		border-bottom: solid #c4c4c4;
+		display: flex;
+		outline: none;
+		transition: 0.3s all ease-in-out;
+		transform-origin: center;
+
+		&:focus {
+			border-bottom-width: 3px;
+			border-bottom-color: #2e84f4;
+		}
 	}
 }
 
@@ -38,4 +88,7 @@ input {
 
 .error {
 	border-right: 2px solid #e31414;
+}
+span {
+	z-index: 1;
 }
