--- a/src/shared/ui/components/hint/hint.component.html
+++ b/src/shared/ui/components/hint/hint.component.html
@@ -1,3 +1,3 @@
-<div class="hint" [style.left]="left" [style.top]="top">
+<div class="hint" [style.left]="left" [style.top]="top" @fadeInOut>
 	<ng-container *ngTemplateOutlet="templateRef"></ng-container>
 </div>
