--- a/src/shared/ui/components/video-action/video-action.component.scss
+++ b/src/shared/ui/components/video-action/video-action.component.scss
@@ -15,3 +15,11 @@
 .rotate-x-180 {
 	transform: rotateX(180deg);
 }
+.disabled {
+	background: gray;
+	color: white;
+	sb-icon {
+		--icon-color: white;
+	}
+	pointer-events: none;
+}
