--- a/src/showcase/components/ui/header/header.component.html
+++ b/src/showcase/components/ui/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="w-screen z-10 h-[60px] bg-purple-600 flex fixed">
+<header class="w-screen z-50 h-[60px] bg-purple-600 flex fixed">
 	<div class="max-w-[1200px] w-full mx-auto px-[20px] flex">
 		<div class="flex w-full items-center py-[15px]">
 			<section>
@@ -17,7 +17,7 @@
 			</section>
 			<section class="flex">
 				<ng-container *ngIf="user$ | async as user; else reg">
-					<a routerLink="user/account">
+					<a routerLink="/user/account">
 						<sb-user-avatar [user]="user" [width]="40" [height]="40"></sb-user-avatar>
 					</a>
 				</ng-container>
@@ -33,12 +33,12 @@
 	<div class="flex flex-col w-full pb-[10px] overflow-y-auto overflow-x-hidden">
 		<ul class="flex bg-gray-100 border-b border-gray-300 min-h-[370px] h-auto pb-[10px] flex-col">
 			<li
-				class="flex py-4 px-6 cursor-pointer transition-colors duration-300 hover:bg-gray-3s00"
-				routerLink="/"
+				class="flex py-4 px-6 cursor-pointer transition-colors duration-300 hover:bg-gray-300"
+				[routerLink]="['/home']"
 				routerLinkActive="bg-gray-200"
 				[routerLinkActiveOptions]="{ exact: true }"
 			>
-				Home
+				<a> Home </a>
 			</li>
 			<li class="flex py-4 px-6 cursor-pointer transition-colors duration-300 hover:bg-gray-300">Trending</li>
 			<li class="py-4 px-6 cursor-pointer transition-colors duration-300 hover:bg-gray-300">Subscriptions</li>
@@ -52,6 +52,7 @@
 			<li
 				class="flex py-4 px-6 cursor-pointer transition-colors duration-300 hover:bg-gray-200"
 				routerLink="/user/history"
+				[relativeTo]="route"
 				routerLinkActive="bg-gray-200"
 			>
 				History
