--- a/src/showcase/components/user/user-page/user-page.component.html
+++ b/src/showcase/components/user/user-page/user-page.component.html
@@ -13,18 +13,40 @@
 </div>
 
 <sb-user-page-switche></sb-user-page-switche>
-
-<div class="max-w-[900px] mx-auto my-[20px]">
+<div class="flex max-w-[900px] flex-col mx-auto my-[20px]">
+	<div class="w-full flex justify-center my-[15px] text-center px-[20px]">
+		<span>{{ currentUser().registerDate | convertTime }} </span>
+	</div>
 	<section class="w-full flex flex-col justify-between">
 		<div class="w-full px-[10px] flex mx-auto justify-between">
 			<div class="flex items-center">
 				<sb-user-avatar [user]="currentUser()" [width]="40" [height]="40"></sb-user-avatar>
 				<span class="text-[21px] ml-[20px]">{{ currentUser().username | titlecase }}</span>
 			</div>
-			<div>
-				<sb-button (click)="editBio(area)" [width]="24" [height]="24" name="complete" icon="edit" rippleColor="#007692"
-					>Edit info</sb-button
-				>
+			<div class="flex">
+				<div>
+					<sb-button
+						(click)="editBio(area)"
+						[width]="24"
+						[height]="24"
+						name="complete"
+						icon="edit"
+						rippleColor="#007692"
+						>Edit info</sb-button
+					>
+				</div>
+				<div class="ml-[20px]">
+					<sb-button
+						(click)="unlogin()"
+						[width]="24"
+						[height]="24"
+						[hoverBgColor]="'#e76161'"
+						name="complete"
+						icon="user"
+						rippleColor="#007692"
+						>Exit from account</sb-button
+					>
+				</div>
 			</div>
 		</div>
 		<div class="flex- w-full flex-col px-[20px]">
@@ -47,6 +69,7 @@
 		<div class="flex mt-[5px] ml-auto px-[20px]" @showButtons *ngIf="area.contentEditable === 'true'">
 			<sb-button
 				icon="accept"
+				background="gray-400"
 				[width]="24"
 				[height]="24"
 				(click)="saveNewBio(area)"
@@ -56,6 +79,7 @@
 			>
 				Save</sb-button
 			><sb-button
+				background="gray-400"
 				class="flex items-center justify-center bg-red-500 text-pnpm text-white"
 				icon="cancel"
 				[width]="24"
@@ -66,7 +90,4 @@
 			>
 		</div>
 	</section>
-	<div class="w-full flex px-[20px]">
-		<span>{{ currentUser().registerDate | convertTime }} </span>
-	</div>
 </div>
