--- a/src/showcase/components/video/page/page.component.html
+++ b/src/showcase/components/video/page/page.component.html
@@ -1,6 +1,6 @@
 <div class="max-w-[1200px] w-full mx-auto mt-[5px] flex flex-col">
 	<section>
-		<ng-container *ngIf="video() as video">
+		<ng-container *ngIf="video$ | async as video">
 			<sb-player [source]="'http://localhost:3001/video/t/' + video.id" [size]="'full'"></sb-player>
 		</ng-container>
 	</section>
@@ -12,8 +12,9 @@
 					<span class="ml-[10px]">{{ video.title | titlecase }}</span>
 				</div>
 				<div class="flex w-full flex-row-reverse ml-auto">
-					<div>
+					<div class="ml-[5px]">
 						<sb-button
+							(click)="navigateToEditor()"
 							icon="edit"
 							name="complete"
 							[hoverBgColor]="'#4396ea'"
@@ -40,7 +41,7 @@
 	</ng-container>
 </div>
 <section class="max-w-[800px] w-full mx-auto p-[20px]">
-	<form class="flex flex-col" [formGroup]="form">
+	<form class="flex flex-col" [formGroup]="form" (submit)="sendComment()">
 		<fieldset>
 			<div>
 				<sb-control
@@ -66,15 +67,18 @@
 		</fieldset>
 	</form>
 </section>
-
-@if(video().comments; as comments) {
-<ng-container *ngIf="comments.length > 0; else empty">
-	@for(comment of comments; track comment.comment.id) {
-	<li>{{ comment.comment | json }}</li>
-	}
-</ng-container>
-}
-
-<ng-template #empty>
-	<span class="text-gray text-3xl mt-[20px] text-gray-500 flex justify-center">No comments yet</span>
-</ng-template>
+<div class="max-w-[800px] w-full mx-auto">
+	<ng-container *ngIf="comments() as comments">
+		@if(comments.length > 0){
+		<ul class="w-full">
+			@if(video$ | async; as video) { @for(comment of comments; track comment.comment.id){
+			<li class="flex flex-col bg-gray-200 mt-[10px]">
+				<sb-comment [comment]="comment" [video]="video"></sb-comment>
+			</li>
+			} }
+		</ul>
+		} @else {
+		<span>No Comments</span>
+		}
+	</ng-container>
+</div>
