--- a/src/showcase/components/user/user-page/user-page.component.html
+++ b/src/showcase/components/user/user-page/user-page.component.html
@@ -37,7 +37,7 @@
 				</div>
 				<div class="ml-[20px]">
 					<sb-button
-						(click)="unlogin()"
+						(click)="unLogin()"
 						[width]="24"
 						[height]="24"
 						[hoverBgColor]="'#e76161'"
