fix(http): video update request * fix video update request not send id localStorage not contain token * added video author page

--- a/src/showcase/components/ui/user-page-switche/user-page-switche.component.html
+++ b/src/showcase/components/ui/user-page-switche/user-page-switche.component.html
@@ -4,19 +4,20 @@
 			<ul class="flex">
 				<li
 					class="mr-[10px] py-[10px] text-center justify-center cursor-pointer"
-					routerLink="/user/account"
+					[routerLink]="[homePath]"
+					[routerLinkActiveOptions]="{ exact: true }"
 					routerLinkActive="active"
 				>
 					<a class="py-[10px] px-[15px] flex items-center text-center"><span>Account</span></a>
 				</li>
 				<li
 					class="ml-[20px] py-[10px] flex items-center justify-center text-center cursor-pointer"
-					routerLink="/user/library"
+					[routerLink]="[libraryPath]"
 					routerLinkActive="active"
 				>
 					<a class="py-[10px] px-[15px] flex items-center text-center"><span>Library</span></a>
 				</li>
-				@if(IS_MOBILE$ | async){
+				@if((IS_MOBILE$ | async) && user.token === token){
 				<li
 					class="ml-[20px] py-[10px] flex items-center justify-center text-center cursor-pointer"
 					(click)="openMobileWindow(upload)"
