--- a/src/shared/ui/components/control/control.component.scss
+++ b/src/shared/ui/components/control/control.component.scss
@@ -17,17 +17,6 @@ div {
 	padding: 11px;
 	border-radius: 15px;
 	position: relative;
-	&:after {
-		content: '';
-		display: block;
-		position: absolute;
-
-		background: white;
-		width: 80px;
-		height: 13px;
-		top: -5px;
-		left: 10px;
-	}
 	input {
 		width: 100%;
 		height: 100%;
@@ -35,6 +24,10 @@ div {
 		outline: none;
 		padding: 5px;
 		border-radius: 15px;
+	}
+	&:focus-within {
+		border: #2e84f4 1px solid;
+		color: #2e84f4;
 	}
 }
 
